<resources>
    <string name="app_name">Sightseer</string>
    <string name="points_interest">Places</string>
    <string name="facebook_app_id">1031583523556756</string>
    <string name="fb_login_protocol_scheme">fb1031583523556756</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_trip">Create Trip</string>
    <string name="welcome_message">Welcome to Sightseer app</string>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="profile_member_since">Member since</string>
    <string name="profile_email">Email</string>
    <string name="profile_languages">Languages</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_new_trip">Create trip</string>
    <string name="nav_home">Home</string>
    <string name="action_favorite">Favorite</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search_hint">Where are you going?</string>
    <string name="search_filter">Filter</string>
    <string name="search_results">Search Results</string>
    <string name="title_activity_user_trips">UserTripsActivity</string>
    <string name="nav_user_trips">Trips</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
