<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/ic_home_map"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/navProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/navFavorites"
            android:icon="@drawable/ic_heart"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/navNewTrip"
            android:icon="@drawable/ic_new_trip"
            android:title="@string/nav_new_trip" />
        <item
            android:id="@+id/navLogout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />
    </group>
</menu>